--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,18 @@
 * {
   font-family: Montserrat !important;
 }
+
+.card {
+  background: #FFFFFF;
+  border-radius: 9px;
+  box-shadow: 0 0 27px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  padding: 10px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+  box-shadow: 0 0 0px 1000px white inset !important;
+}
