change v-container in every page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,3 +16,8 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active{
   box-shadow: 0 0 0px 1000px white inset !important;
 }
+
+.page-container {
+  padding-top: 12px !important;
+  padding-bottom: 0 !important;
+}
