add page transition

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -31,3 +31,13 @@ input:-webkit-autofill:active{
   background: #334064;
   color: white;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s;
+}
+.page-enter-from,
+.page-leave-to {
+  opacity: 0;
+  filter: blur(1rem);
+}
